<resources>
    <string name="app_name">健康伴侣</string>

    <!-- 权限相关 -->
    <string name="permission_title">提示</string>
    <string name="permission_sure">确定</string>
    <string name="permission_msg_storage">健康伴侣需要获取您的SD卡储存权限，用于存储图文相关图片。如果您拒绝，将无法显示相关图片！</string>
    <string name="permission_msg_storage_failed">存储权限已被禁止!</string>
    <string name="permission_location">健康伴侣需要获取您的定位权限,用户提交随访表时获取您的位置信息</string>

    <string name="user_name_tip">"请输入用户名"</string>
    <string name="user_pwd_tip">"请输入密码"</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="test">测 试</string>

    <string name="toast_time_out">当前网络不顺畅，请检查网络</string>
    <string name="toast_net_error">当前没有网络，请检查网络是否开启</string>
    <string name="toast_service_error">服务器异常，请重试</string>

    <string name="login_result_fail">登录失败</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="tab_online">在线看病</string>
    <string name="tab_test">健康测试</string>
    <string name="tab_personal">我的</string>
    <string name="tab_shop">闪电购物</string>
    <string name="tab_video">教学视频</string>

    <string name="exit_application">再按一次退出应用</string>
    <string name="app_module_wait_for_develop">该功能暂未开放，敬请期待...</string>
    <string name="personal_report">我的健康报告</string>
    <string name="personal_collect">我的收藏</string>
    <string name="personal_msg">我的消息</string>
    <string name="personal_setting">我的设置</string>

    <string name="home_search_tip">输入疾病症状找医生</string>

    <!-- 数据加载 -->
    <string name="pull_to_refresh_footer_refreshing_label">正在加载&#8230;</string>
    <string name="refresh_pull_to_refresh">下拉可以刷新&#8230;</string>
    <string name="refresh_release_to_refresh">松开可以刷新&#8230;</string>
    <string name="refresh_refreshing">正在努力加载中&#8230;</string>
    <string name="title_activity_health_test_submit">HealthTestSubmitActivity</string>
    <string name="title_activity_face">FaceActivity</string>

    <!-- 相机相册 -->
    <string name="insertsdcard">对不起，请插入SD卡</string>
    <string name="notsupport">本设备系统不支持该操作</string>
    <string name="permission_msg_camera">健康伴侣需要获取您的相机权限，用于拍照等功能。如果您拒绝，将无法使用拍照等功能！</string>
</resources>
