<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        >

        <ImageView
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:background="@drawable/ic_entry_icon"
            android:contentDescription="@string/app_name"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            >

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name_tip"
                android:maxLength="20"
                />

            <ImageView
                android:id="@+id/login_clear_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="4dp"
                android:src="@drawable/ic_login_clear_content"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/login_input_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_pwd_tip"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                />

            <com.mobile.healthmate.view.CheckableImageView
                android:id="@+id/login_pwd_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_password_selector"
                android:padding="4dp"
                />

            <View
                android:id="@+id/view_pwd_line"
                android:layout_width="1px"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_toLeftOf="@id/login_pwd_check"
                android:background="@color/line"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/login_clear_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/view_pwd_line"
                android:padding="4dp"
                android:src="@drawable/ic_login_clear_content"
                android:visibility="gone"/>
        </RelativeLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:enabled="false"
            android:onClick="onLoginClick"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="19sp"/>
    </LinearLayout>
</ScrollView>
